syntax = "proto3";

package autokitteh.envs.v1;

message Env {
  string env_id = 1;
  string project_id = 2;
  string name = 3;
}
